generated/checkers/gen/AllGen-Double-Free-19ebc1e6cab334a8193398d4152deb76019b5d34/build_logs/syntax-repair-02/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::detectAndReport(const clang::FunctionDecl*, const std::vector<{anonymous}::LabelInfo>&, const std::vector<{anonymous}::GotoInfo>&, const std::vector<{anonymous}::FreeSite>&, const std::vector<{anonymous}::AssignInfo>&, clang::ento::BugReporter&, clang::ASTContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:370:55: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(const clang::CallExpr* const&, const clang::SourceManager&, const clang::FunctionDecl*&)’
  370 |             PathDiagnosticLocation(FS.FreeCall, SM, FD));
      |                                                       ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:241:3: note: candidate: ‘clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(clang::SourceLocation, const clang::SourceManager&)’
  241 |   PathDiagnosticLocation(SourceLocation loc, const SourceManager &sm)
      |   ^~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:241:3: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:231:3: note: candidate: ‘clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(const clang::Decl*, const clang::SourceManager&)’
  231 |   PathDiagnosticLocation(const Decl *d, const SourceManager &sm)
      |   ^~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:231:3: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:220:3: note: candidate: ‘clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  220 |   PathDiagnosticLocation(const Stmt *s, const SourceManager &sm,
      |   ^~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:221:56: note:   no known conversion for argument 3 from ‘const clang::FunctionDecl*’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  221 |                          LocationOrAnalysisDeclContext lac)
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:217:3: note: candidate: ‘constexpr clang::ento::PathDiagnosticLocation::PathDiagnosticLocation()’
  217 |   PathDiagnosticLocation() = default;
      |   ^~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:217:3: note:   candidate expects 0 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:205:3: note: candidate: ‘clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(clang::SourceLocation, const clang::SourceManager&, clang::ento::PathDiagnosticLocation::Kind)’
  205 |   PathDiagnosticLocation(SourceLocation L, const SourceManager &sm, Kind kind)
      |   ^~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:205:41: note:   no known conversion for argument 1 from ‘const clang::CallExpr* const’ to ‘clang::SourceLocation’
  205 |   PathDiagnosticLocation(SourceLocation L, const SourceManager &sm, Kind kind)
      |                          ~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:195:7: note: candidate: ‘constexpr clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(const clang::ento::PathDiagnosticLocation&)’
  195 | class PathDiagnosticLocation {
      |       ^~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:195:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:195:7: note: candidate: ‘constexpr clang::ento::PathDiagnosticLocation::PathDiagnosticLocation(clang::ento::PathDiagnosticLocation&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:195:7: note:   candidate expects 1 argument, 3 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
